[package]
name = "hcse_parser"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono= "0.4"
tempdir = "0.3.7"
crossterm = "0.20"
indicatif = "0.17.8"
reqwest = "0.12.4"
file_integrity = "0.1.7" 
async-compression = { version = "0.4.10", features = ["tokio", "gzip"] }
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
